--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   
 <div class="github-card">
 <p class="asidetitle">Github 名片</p>
-<div class="github-card" data-github="liaojiaxin" data-theme="medium"></div>
+<div class="github-card" data-github="liaojiaxin158" data-theme="medium"></div>
 <script type="text/javascript" src="//lab.lepture.com/github-cards/widget.js" ></script>
 </div>
 
