--- a/about_xin.html
+++ b/about_xin.html
@@ -1,7 +1,7 @@
 ---
 title: 个人简介
 ---
-<link href="{{ site.baseurl }}/css/tabswitch.css" rel="stylesheet">
+<link href="/css_xin/tabswitch.css" rel="stylesheet">
 <div id="article" aos="zoom-in">
    <div class="w1200">
      <h1 align="center"><span>个人</span>简介</h1> 
@@ -19,7 +19,7 @@ title: 个人简介
        <div class="study"> 
         <h4>本站简介</h4> 
         <span>fork于https://github.com/liangrengongzuoshi/liangzai.pub的博客，基于github pages + jekyll + gitment + markdown + jquery + html5 + javascript + css3 等于2017.5.10开始搭建的个人技术博客；于2020.11.1进行2次修改，包括代码等，如果喜欢本网站欢迎fork，如果有问题欢迎吐槽留言~ 使用该模板请注明来源，谢谢~PS:写博客的原因主要是为了记录自己工作和学习各种咚咚的点点滴滴</span>
-	       <img class="pic-gif" src="{{ site.baseurl }}/images/liuyan.gif"/>
+	       <img class="pic-gif" src="/images_xin/liuyan.gif"/>
 	
        </div> 
       </div> 
@@ -29,7 +29,7 @@ title: 个人简介
        <div class="study"> 
         <h4>个人信息</h4> 
         <span>博主坐标成都，性别男，爱好女，目前在鼎桥通信担任CMO/CIE；喜欢瞎搞搞，对技术有兴趣，会python,java，jenkins，git,gerrit等，目前单身~</span>
-		<img class="pic-gif" src="{{ site.baseurl }}/images/wa.gif"/>
+		<img class="pic-gif" src="/images/wa.gif"/>
        </div> 
       </div> 
      </div> 
@@ -41,7 +41,7 @@ title: 个人简介
         <span>锦江学院，坐标眉山市彭山县，四川长藤青式高校，农村式大学，一个字：好偏~ 两个字：真的是山卡卡~</span>
         <span><a href="https://720yun.com/t/af2z671v86s?pano_id=97130" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></span>
 		<div class="baguetteBoxThree gallery">
-			<a href="{{ site.baseurl }}/images/school.jpg"><img alt="山科大平面图" title="点击查看大图" src="{{ site.baseurl }}/images/school_lim.jpg"/></a>
+			<a href="/images/school.jpg"><img alt="山科大平面图" title="点击查看大图" src="/images/school_lim.jpg"/></a>
 		</div>
        </div> 
       </div> 
@@ -51,7 +51,7 @@ title: 个人简介
        <div class="study"> 
         <h4>工作履历</h4> 
         <span>博主很懒，暂时不更新工作履历...</span>
-		<img class="pic-gif" src="{{ site.baseurl }}/images/strd.gif"/>
+		<img class="pic-gif" src="/images/strd.gif"/>
        </div> 
       </div> 
      </div> 
@@ -62,24 +62,11 @@ title: 个人简介
         <span>上天入地</span> 
         <span>上天:爬山，手脚并用的爬山...</span> 
         <span>入地:游泳，手脚并用的游泳，像蝶泳、自由泳、蛙泳、狗刨、踩水等等，统统都不会...</span> 
-		<img class="pic-gif" src="{{ site.baseurl }}/images/rlsz.gif"/>
+		<img class="pic-gif" src="/images/rlsz.gif"/>
        </div> 
       </div> 
      </div> 
-     <div class="cl" style="display: none"> 
-      <div class="important_r"> 
-       <div class="study"> 
-        <h4>友情链接</h4> 
-        <span><a class="a-site" href="{{ site.baseurl }}/htmlhub/flashsite/index.html" target="_blank">flash小网站，曾经练手用</a></span>
-        <span><a class="a-site" href="{{ site.baseurl }}/bbqner.html" target="_blank">flash小动画，爸爸去哪儿</a></span>
-        <span><a class="a-site" href="http://www.jq22.com/" target="_blank">一个不错jquery插件网站</a></span>
-        <span><a class="a-site" href="http://jekyll.com.cn/" target="_blank">jekyll中文...</a></span>
-        <span><a class="a-site" href="http://jekyllthemes.org/" target="_blank">jekyll模板...</a></span>
-        <span><a class="a-site" href="https://www.zhihu.com/question/20223939" target="_blank">知乎精华帖jekyll模板</a></span>
-		<img class="pic-gif" src="{{ site.baseurl }}/images/dagun.gif"/>
-       </div> 
-      </div> 
-     </div> 
+     
     </div> 
    </div> 
   </div>
