修改：      about_xin.html

--- a/about_xin.html
+++ b/about_xin.html
@@ -2,6 +2,7 @@
 title: 个人简介
 ---
 <link href="/css_xin/tabswitch.css" rel="stylesheet">
+<script src="/js_xin/jquery-1.10.2.min.js"></script>
 <div id="article" aos="zoom-in">
    <div class="w1200">
      <h1 align="center"><span>个人</span>简介</h1> 
@@ -29,7 +30,7 @@ title: 个人简介
        <div class="study"> 
         <h4>个人信息</h4> 
         <span>博主坐标成都，性别男，爱好女，目前在鼎桥通信担任CMO/CIE；喜欢瞎搞搞，对技术有兴趣，会python,java，jenkins，git,gerrit等，目前单身~</span>
-		<img class="pic-gif" src="/images/wa.gif"/>
+		<img class="pic-gif" src="/images_xin/wa.gif"/>
        </div> 
       </div> 
      </div> 
@@ -41,7 +42,7 @@ title: 个人简介
         <span>锦江学院，坐标眉山市彭山县，四川长藤青式高校，农村式大学，一个字：好偏~ 两个字：真的是山卡卡~</span>
         <span><a href="https://720yun.com/t/af2z671v86s?pano_id=97130" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></span>
 		<div class="baguetteBoxThree gallery">
-			<a href="/images/school.jpg"><img alt="山科大平面图" title="点击查看大图" src="/images/school_lim.jpg"/></a>
+			<a href="/images_xin/school.jpg"><img alt="山科大平面图" title="点击查看大图" src="/images_xin/school_lim.jpg"/></a>
 		</div>
        </div> 
       </div> 
@@ -51,7 +52,7 @@ title: 个人简介
        <div class="study"> 
         <h4>工作履历</h4> 
         <span>博主很懒，暂时不更新工作履历...</span>
-		<img class="pic-gif" src="/images/strd.gif"/>
+		<img class="pic-gif" src="/images_xin/strd.gif"/>
        </div> 
       </div> 
      </div> 
@@ -62,7 +63,7 @@ title: 个人简介
         <span>上天入地</span> 
         <span>上天:爬山，手脚并用的爬山...</span> 
         <span>入地:游泳，手脚并用的游泳，像蝶泳、自由泳、蛙泳、狗刨、踩水等等，统统都不会...</span> 
-		<img class="pic-gif" src="/images/rlsz.gif"/>
+		<img class="pic-gif" src="/images_xin/rlsz.gif"/>
        </div> 
       </div> 
      </div> 
