修改：      about/index.html

--- a/about_xin.html
+++ b/about_xin.html
@@ -19,7 +19,16 @@ title: 个人简介
       <div class="important_r"> 
        <div class="study"> 
         <h4>本站简介</h4> 
-        <span>fork于https://github.com/liangrengongzuoshi/liangzai.pub的博客，基于github pages + jekyll + gitment + markdown + jquery + html5 + javascript + css3 等于2017.5.10开始搭建的个人技术博客；于2020.11.1进行2次修改，包括代码等，如果喜欢本网站欢迎fork，如果有问题欢迎吐槽留言~ 使用该模板请注明来源，谢谢~PS:写博客的原因主要是为了记录自己工作和学习各种咚咚的点点滴滴</span>
+        <p>写博客的初衷：</p>
+		<p>1.由于记忆有限，写博客是为了记录学习的过程，工作相关总结，和一些工作中的所遇到的问题</p>
+		<p>2.锻炼自己的总结能力，顺便找工作让别人了解</p>
+		<p>未来规划:</p>
+		<p>1.java，VUE等知识，由于工作性质，要达到初级能做一些简单的统计管理系统</p>
+		<p>2.git,gerrit,jenkins等集成相关的，深入学习理解，达到工作要求。</p>
+		<p>3.python,shell,linux等知识，深入学习，专攻。</p>
+		<p>4.计算机原理，网络协议，C等知识。到达工作要求</p>
+		<p>我的人生口号:</p>
+		<p>大胆设想，大胆创新，勇于背锅</p>
 	       <img class="pic-gif" src="/images_xin/liuyan.gif"/>
 	
        </div> 
@@ -28,8 +37,11 @@ title: 个人简介
      <div class="cl" style="display: none;"> 
       <div class="important_r"> 
        <div class="study"> 
-        <h4>个人信息</h4> 
-        <span>博主坐标成都，性别男，爱好女，目前在鼎桥通信担任CMO/CIE；喜欢瞎搞搞，对技术有兴趣，会python,java，jenkins，git,gerrit等，目前单身~</span>
+        <h4>个人信息</h4>
+		<p>博主是转行生，从土木转入计算机，于2018年3月9号培训完java，嫌弃者右拐</p>
+        <p>博主坐标成都，新都区，性别:男，目前在中软国际外派鼎桥做持续集成以及配置管理相关，本人喜欢瞎想，瞎搞，会python,java，jenkins，git,gerrit等~</p>
+		<p>博主性格偏温柔，安全领域意识强，生人勿近，熟人喜欢蹦蹦跳跳，装逼献宝，孩子气。好奇心重，喜欢学习各种各样的东西</p>
+		
 		<img class="pic-gif" src="/images_xin/wa.gif"/>
        </div> 
       </div> 
@@ -40,9 +52,9 @@ title: 个人简介
         <h4>四川大学锦江学院</h4> 
         <span>2012-2016年就读于四川大学锦江学院土木工程系</span>
         <span>锦江学院，坐标眉山市彭山县，四川长藤青式高校，农村式大学，一个字：好偏~ 两个字：真的是山卡卡~</span>
-        <span><a href="https://720yun.com/t/af2z671v86s?pano_id=97130" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></span>
+        <span><a href="http://www.detu.com/pano/show/121401" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></span>
 		<div class="baguetteBoxThree gallery">
-			<a href="/images_xin/school.jpg"><img alt="山科大平面图" title="点击查看大图" src="/images_xin/school_lim.jpg"/></a>
+			<a href="/images_xin/jj_school.jpg">
 		</div>
        </div> 
       </div> 
@@ -51,7 +63,12 @@ title: 个人简介
       <div class="important_r"> 
        <div class="study"> 
         <h4>工作履历</h4> 
-        <span>博主很懒，暂时不更新工作履历...</span>
+        <span>2016.6-2017.6,在地方政府机关做文员类工作，处理表格，打字等~~~~</span>
+		<span>2017.7-2017.9,思考人生，开始自学编程，第一本书c primer plus结合郝斌C语言视频 第二本java first head结合马士彬</span>
+		<span>2017.9-2018.3,培训java，学习<span>
+		<span>2018.4-2018.12,java工程师，就职红驱科技，于2018.8创立，创立前一直是黑公司~~~~主要负责置业顾问和用户的管理系统，后因经营不善，节约成本被辞退--<a href="https://baike.baidu.com/item/%E6%88%90%E9%83%BD%E7%BA%A2%E9%A9%B1%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/23266511?fr=aladdin" target="_blank">百度简介：红驱科技</a></span>	
+		<span>2019.3-2020.7，持续集成工程师，就职于软通动力，主要负责门禁等集成，华为自研工具，服务器，脚本编写等工作<span>
+		<span>2020.7-至今，持续集成工程师，就职于中软国际，外派鼎桥做持续集成，安全终端部门，手机定制相关</span>
 		<img class="pic-gif" src="/images_xin/strd.gif"/>
        </div> 
       </div> 
@@ -60,14 +77,24 @@ title: 个人简介
       <div class="important_r"> 
        <div class="study"> 
         <h4>兴趣爱好</h4> 
-        <span>上天入地</span> 
+        <p>爱好:篮球，台球，羽毛球，乒乓球，游戏等，喜欢听歌，但不喜欢唱歌~~</p>
         <span>上天:爬山，手脚并用的爬山...</span> 
-        <span>入地:游泳，手脚并用的游泳，像蝶泳、自由泳、蛙泳、狗刨、踩水等等，统统都不会...</span> 
+        <span>入地:游泳，手脚并用的游泳，像蝶泳、自由泳、蛙泳、踩水等等，统统都不会,只会狗刨~~~</span> 
 		<img class="pic-gif" src="/images_xin/rlsz.gif"/>
        </div> 
       </div> 
      </div> 
-     
+     <div class="cl" style="display: none"> 
+      <div class="important_r"> 
+       <div class="study"> 
+        <h4>友情链接</h4> 
+        <span><a class="a-site" href="http://jekyll.com.cn/" target="_blank">jekyll中文...</a></span>
+        <span><a class="a-site" href="http://jekyllthemes.org/" target="_blank">jekyll模板...</a></span>
+        <span><a class="a-site" href="https://www.zhihu.com/question/20223939" target="_blank">知乎精华帖jekyll模板</a></span>
+		<img class="pic-gif" src="/images_xin/dagun.gif"/>
+       </div> 
+      </div> 
+     </div> 
     </div> 
    </div> 
   </div>
