修改：      about_xin.html

--- a/about_xin.html
+++ b/about_xin.html
@@ -52,9 +52,9 @@ title: 个人简介
         <h4>四川大学锦江学院</h4> 
         <span>2012-2016年就读于四川大学锦江学院土木工程系</span>
         <span>锦江学院，坐标眉山市彭山县，四川长藤青式高校，农村式大学，一个字：好偏~ 两个字：真的是山卡卡~</span>
-        <span><a href="http://www.detu.com/pano/show/121401" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></span>
+        <p><a href="http://www.detu.com/pano/show/121401" title="四川大学锦江学院航拍" target="_blank" class="a-skd">欣赏下四川大学锦江学院航拍</a></p>
 		<div class="baguetteBoxThree gallery">
-			<a href="/images_xin/jj_school.jpg">
+			<a href="/images_xin/jj_shool.jpg">
 		</div>
        </div> 
       </div> 
@@ -66,7 +66,7 @@ title: 个人简介
         <span>2016.6-2017.6,在地方政府机关做文员类工作，处理表格，打字等~~~~</span>
 		<span>2017.7-2017.9,思考人生，开始自学编程，第一本书c primer plus结合郝斌C语言视频 第二本java first head结合马士彬</span>
 		<span>2017.9-2018.3,培训java，学习<span>
-		<span>2018.4-2018.12,java工程师，就职红驱科技，于2018.8创立，创立前一直是黑公司~~~~主要负责置业顾问和用户的管理系统，后因经营不善，节约成本被辞退--<a href="https://baike.baidu.com/item/%E6%88%90%E9%83%BD%E7%BA%A2%E9%A9%B1%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/23266511?fr=aladdin" target="_blank">百度简介：红驱科技</a></span>	
+		<span>2018.4-2018.12,java工程师，就职红驱科技，于2018.8创立，创立前一直是黑公司~~~~主要负责置业顾问和用户的管理系统，后因经营不善，节约成本被辞退--<p><a href="https://baike.baidu.com/item/%E6%88%90%E9%83%BD%E7%BA%A2%E9%A9%B1%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/23266511?fr=aladdin" target="_blank">百度简介：红驱科技</a><p></span>	
 		<span>2019.3-2020.7，持续集成工程师，就职于软通动力，主要负责门禁等集成，华为自研工具，服务器，脚本编写等工作<span>
 		<span>2020.7-至今，持续集成工程师，就职于中软国际，外派鼎桥做持续集成，安全终端部门，手机定制相关</span>
 		<img class="pic-gif" src="/images_xin/strd.gif"/>
