修改：      about_xin.html

--- a/about_xin.html
+++ b/about_xin.html
@@ -20,15 +20,12 @@ title: 个人简介
        <div class="study"> 
         <h4>本站简介</h4> 
         <p>写博客的初衷：</p>
-		<p>1.由于记忆有限，写博客是为了记录学习的过程，工作相关总结，和一些工作中的所遇到的问题</p>
-		<p>2.锻炼自己的总结能力，顺便找工作让别人了解</p>
+		<p>1.好记性不如烂笔头，通过博客来记录自己的学习知识和工作的心得，并且锻炼自己的总结能力。</p>
+		<p>2.将一些遇见的问题的解决方案或者是百度查找以或者是一些工具的搭建的记录下来，因为时间一久，网站失效，收藏的网站太乱不容易找到</p>
+		<p>3.扩展自己的知识面，整理自己的知识，因为工作中用的很局限性，长期不用会忘掉，所以每天睡前会花1-2个小时来写博客</p>
 		<p>未来规划:</p>
-		<p>1.java，VUE等知识，由于工作性质，要达到初级能做一些简单的统计管理系统</p>
-		<p>2.git,gerrit,jenkins等集成相关的，深入学习理解，达到工作要求。</p>
-		<p>3.python,shell,linux等知识，深入学习，专攻。</p>
-		<p>4.计算机原理，网络协议，C等知识。到达工作要求</p>
-		<p>我的人生口号:</p>
-		<p>大胆设想，大胆创新，勇于背锅</p>
+		<p>1.git,gerrit,jenkins等集成相关的，深入学习理解，达到工作要求。</p>
+		<p>2.python,shell,linux等知识，深入学习，专攻。</p>
 	       <img class="pic-gif" src="/images_xin/liuyan.gif"/>
 	
        </div> 
@@ -38,9 +35,9 @@ title: 个人简介
       <div class="important_r"> 
        <div class="study"> 
         <h4>个人信息</h4>
-		<p>博主是转行生，从土木转入计算机，于2018年3月9号培训完java，嫌弃者右拐</p>
-        <p>博主坐标成都，新都区，性别:男，目前在中软国际外派鼎桥做持续集成以及配置管理相关，本人喜欢瞎想，瞎搞，会python,java，jenkins，git,gerrit等~</p>
-		<p>博主性格偏温柔，安全领域意识强，生人勿近，熟人喜欢蹦蹦跳跳，装逼献宝，孩子气。好奇心重，喜欢学习各种各样的东西</p>
+		<p>博主是转行生，从土木转入计算机，于2017年3月9号培训完java</p>
+        <p>博主坐标成都，新都区，性别:男，目前在中软国际外派鼎桥做持续集成以及配置管理相关，本人喜欢瞎想，瞎搞，会python,java，linux，jenkins，git,gerrit等~</p>
+		<p>博主直男一枚，好奇心重，喜欢学习各种各样的东西</p>
 		
 		<img class="pic-gif" src="/images_xin/wa.gif"/>
        </div> 
@@ -63,11 +60,9 @@ title: 个人简介
       <div class="important_r"> 
        <div class="study"> 
         <h4>工作履历</h4> 
-        <span>2016.6-2017.6,在地方政府机关做文员类工作，处理表格，打字等~~~~</span>
-		<span>2017.7-2017.9,思考人生，开始自学编程，第一本书c primer plus结合郝斌C语言视频 第二本java first head结合马士彬</span>
+        <span>2016.6-2017.9,在地方政府机关做文员类工作，处理表格，打字等~~~~后来思考人生，开始自学编程，第一本书c primer plus结合郝斌C语言视频 第二本java first head结合马士彬</span>
 		<span>2017.9-2018.3,培训java，学习<span>
-		<span>2018.4-2018.12,java工程师，就职红驱科技，于2018.8创立，创立前一直是黑公司~~~~主要负责置业顾问和用户的管理系统，后因经营不善，节约成本被辞退--点击--><a href="https://baike.baidu.com/item/%E6%88%90%E9%83%BD%E7%BA%A2%E9%A9%B1%E7%A7%91%E6%8A%80%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8/23266511?fr=aladdin" target="_blank">百度简介：红驱科技</a></span>	
-		<span>2019.3-2020.7，持续集成工程师，就职于软通动力，主要负责门禁等集成，华为自研工具，服务器，脚本编写等工作<span>
+		<span>2018.3-2020.7，java工程师主要负责一些WEB工具的后台数据处理等，测试工程师，主要负责WEB自动化脚本等，持续集成工程师，就职于软通动力，主要负责门禁等集成，华为自研工具，服务器，脚本编写等工作<span>
 		<span>2020.7-至今，持续集成工程师，就职于中软国际，外派鼎桥做持续集成，安全终端部门，手机定制相关</span>
 		<img class="pic-gif" src="/images_xin/strd.gif"/>
        </div> 
